--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 
 /* Стили для контейнера графика */
 .chart-container {
-    width: 80%;
+    width: 50%;
     margin: 0 auto;
 }
 
@@ -23,6 +23,11 @@ body {
 
 /* Стили для графика */
 #activityChart {
-    width: 100%;
-    height: 400px; /* Задайте высоту графика по своему усмотрению */
+    width: 50%;
+    height: 20vh; /* Задайте высоту графика по своему усмотрению */
+}
+
+.activity__chart {
+    width: 50%;
+    height: 20vh;
 }
