--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 * {
     box-sizing: border-box;
+
+}
+*:focus {
+    outline: none;
+    border: none;
 }
 
 /* Переменные для светлой темы */
@@ -10,6 +15,7 @@
     --card-background: #fff;
     --background-grid-color: #11c9d5;
     --border-color: #000;
+    --hover-color: green;
 }
 
 /* Переменные для темной темы */
@@ -20,6 +26,7 @@
     --card-background: #444;
     --background-grad-color: #b400b8;
     --border-color: #fff;
+    --hover-color: blue;
 }
 
 :root {
@@ -148,3 +155,70 @@ progress {
     width: 100%;
     margin-bottom: 10px;
 }
+
+.select-lang {
+    font-family: 'Press Start 2P', cursive;
+}
+
+.hidden {
+    display: none;
+}
+
+.custom-select {
+
+    position: relative;
+    user-select: none;
+  }
+  
+  .custom-select__trigger {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    border: 1px solid var(--border-color);
+    cursor: pointer;
+    flex-wrap: nowrap;
+    gap: 5px;
+
+  }
+  
+  .custom-options {
+ 
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    border: 1px solid var(--border-color);
+    z-index: 2;
+    background: var(--background-color);
+    color: var(--text-color);
+  }
+  
+  .custom-option {
+    cursor: pointer;
+    width: 100%;
+    &:hover {
+      background-color: var(--hover-color);
+      color: white;
+    }
+  }
+  
+  .arrow {
+    margin-left: auto;
+    /* Добавь стили для стрелки */
+  }
+  
+  .main__button {
+    border: 4px solid var(--border-color);
+    padding: 20px;
+    &:hover {
+        background-color: var(--hover-color);
+        color: white;
+    }
+  }
+
+  #activityChartContainer {
+    display: none;
+  }
