--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
     outline: none;
     border: none;
 }
+/* коммент для коммита и починки страницы */
 
 /* Переменные для светлой темы */
 :root.light-theme {
